<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.auiucloud</groupId>
        <artifactId>auiu-meta-auth</artifactId>
        <version>1.0.1</version>
    </parent>

    <artifactId>meta-auth</artifactId>
    <name>meta-auth</name>
    <description>meta-auth</description>
    <properties>
        <java.version>17</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.auiucloud</groupId>
            <artifactId>meta-auth-api</artifactId>
        </dependency>
        <dependency>
            <groupId>com.auiucloud</groupId>
            <artifactId>meta-admin-api</artifactId>
        </dependency>
        <dependency>
            <groupId>com.auiucloud</groupId>
            <artifactId>meta-ums-api</artifactId>
        </dependency>
        <dependency>
            <groupId>com.auiucloud</groupId>
            <artifactId>auiu-meta-redis</artifactId>
        </dependency>
        <dependency>
            <groupId>com.auiucloud</groupId>
            <artifactId>auiu-meta-security</artifactId>
        </dependency>
        <dependency>
            <groupId>com.auiucloud</groupId>
            <artifactId>auiu-meta-cloud</artifactId>
        </dependency>
        <dependency>
            <groupId>com.auiucloud</groupId>
            <artifactId>auiu-meta-web</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.auiucloud</groupId>
            <artifactId>auiu-meta-seata</artifactId>
        </dependency>
        <dependency>
            <groupId>com.auiucloud</groupId>
            <artifactId>auiu-meta-log</artifactId>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>org.springframework.cloud</groupId>-->
<!--            <artifactId>spring-cloud-starter-oauth2</artifactId>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.springframework.security</groupId>-->
<!--            <artifactId>spring-security-oauth2-jose</artifactId>-->
<!--        </dependency>-->
        <dependency>
            <groupId>com.github.whvcse</groupId>
            <artifactId>easy-captcha</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openjdk.nashorn</groupId>
            <artifactId>nashorn-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.binarywang</groupId>
            <artifactId>weixin-java-miniapp</artifactId>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <!-- 指定打包时，需要特殊处理的文件 -->
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>certs/*</exclude>
                </excludes>
                <!-- 处理文件时，需要对文件进行变量替换 -->
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>certs/*</include>
                </includes>
                <filtering>false</filtering>
            </resource>
            <!--            <resource>-->
            <!--                <directory>src/main/java</directory>-->
            <!--                <includes>-->
            <!--                    <include>**/*.xml</include>-->
            <!--                </includes>-->
            <!--            </resource>-->
        </resources>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
